# dsl41

./: .gitignore  CLAUDE.md  COMMERCIAL.md  LICENSING.md  README.md  pyproject.toml
.github/workflows/: audit.yml  ci.yml  release.yml  secrets.yml
docs/: autosys-semantics.md  decision-log.md  ir-design.md  jil-statement-syntax.md  runner-design.md  stonebranch-semantics.md  supervisor-protocol.md
grammars/: condition.lark
src/dsl41/: __init__.py  __main__.py  ast_jil.py  backend_uc.py  cli.py  conditions.py  derive.py  dsl.py  equiv.py  ir.py  lint.py  oracle.py  placeholders.py  runner.py  runner_supervisor.py  runner_tui.py  runner_wrapper.py  uc_oracle.py  viz.py
tests/: bisim_harness.py  runner_crash_driver.py  runner_detached_driver.py  test_ast_fidelity.py  test_backend_uc.py  test_condition_grammar.py  test_conditions.py  test_derive.py  test_dsl.py  test_equiv.py  test_ir.py  test_lint.py  test_oracle.py  test_placeholders.py  test_resources.py  test_runner.py  test_runner_adapters.py  test_runner_control.py  test_runner_journal.py  test_runner_lifecycle.py  test_runner_scheduler.py  test_runner_serve.py  test_runner_supervisor.py  test_runner_tui.py  test_uc_oracle.py  test_viz.py
tests/corpus/: calendars_autocal.jil  comments_layout.jil  continuation_multiline.jil  fold_t003_or_join.jil  fold_t004_typed_links.jil  fold_t006_resources.jil  fold_t007_schedules.jil  kitchen_sink.jil  l016_resource_ref.jil  l018_calendar_ref.jil  m07_mutex.jil  machines_base.jil  machines_virtual_pool.jil  machines_xinst.jil  names_colon_join.jil  oneline_form.jil  sem04_lookback.jil  sem04_lookback_pitfall.jil  sem06_dangling.jil  sem08_globals.jil  sem10_box_basic.jil  sem12_external_gate.jil  sem24_status_resource.jil  sem30_dead_config.jil  sem30_schedule.jil  sem31_xor.jil  torture_colon.jil
