[project]
name = "dsl41"
version = "0.0.1"
description = "AutoSys->Stonebranch migration compiler: JIL frontend, semantic IR, linter, equivalence validator, UC backend. Internal codename; public name TBD."
requires-python = ">=3.12"
license = "AGPL-3.0-only"
dependencies = [
    "lark>=1.3",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
dsl41 = "dsl41.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# grammars/ lives at the repo root (docs reference it there); ship it inside the
# package so conditions._grammar_text() works from a wheel install too.
[tool.hatch.build.targets.wheel.force-include]
"grammars/condition.lark" = "dsl41/grammars/condition.lark"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
