[project]
name = "dsl41"
version = "0.2.0"
description = "AutoSys->Stonebranch migration compiler: JIL frontend, semantic IR, linter, Mermaid visualizer, equivalence validator, UC backend, Python DSL."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
license-files = ["LICENSE", "LICENSING.md", "COMMERCIAL.md"]
authors = [{ name = "dsl41 authors", email = "mail@bobah.net" }]
keywords = [
    "autosys",
    "jil",
    "stonebranch",
    "universal-controller",
    "workload-automation",
    "scheduler",
    "migration",
    "compiler",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Compilers",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "lark>=1.3",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
# ss11 TUI: the core package keeps its three runtime deps (runner-design ss11).
# textual floor = the family the TUI is developed and tested against (DL-46);
# textual-serve floor = the version paired with that textual and verified
# against it (DL-47) -- claiming untested floors is how UIs break at install
# time.
ui = ["textual>=8", "textual-serve>=1.1"]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "ruff>=0.6",
    "mypy>=1.10",
    "textual>=8",
    "textual-serve>=1.1",
]

[project.urls]
Repository = "https://github.com/mrbald/dsl41"
Issues = "https://github.com/mrbald/dsl41/issues"

[project.scripts]
dsl41 = "dsl41.cli:app"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

# grammars/ lives at the repo root (docs reference it there); ship it inside the
# package so conditions._grammar_text() works from a wheel install too.
[tool.hatch.build.targets.wheel.force-include]
"grammars/condition.lark" = "dsl41/grammars/condition.lark"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
# a wedged test dumps every thread's stack instead of hanging silently (the
# whole suite runs in ~30s; the v0.2.0 release hang burned a 6h CI slot mute)
faulthandler_timeout = 120
